@@ -211,6 +211,9 @@ Issues a summary *after* each treated directory containing the amount of data ba
 .TP 20
 -va, --verbose=all
 is equivalent to -vm -vs -vt, see also -Q and -q options below. Note: When using dar from a script better use dar's exit status to know which way the operation has ended (seen EXIT CODES at the end of this document).
+.TP 20
+-vmasks, --verbose=masks
+Display raw information about the masks set by dar and passed to libdar
 
 .TP 20
 -q, --quiet
